# studio

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 0ee6a6f4d65d_apply_local_time_db_default_to_audit_.py  26e94d5983ab_create_users_table.py  3cd856abfd65_add_column_comments_to_users_table.py  621184be641b_store_timestamps_as_local_naive_time.py  6a0fb178c5b7_widen_audit_columns_to_bigint.py  6b5040798a90_recreate_users_table_with_business_then_.py  6e54c5b37edf_create_refresh_tokens_table.py  94c0f2fa9ffe_create_error_codes.py  9cb1c3452965_add_account_lockout_columns.py  ac6e7626417d_create_projects_and_stages.py  ae9fe4100f24_add_user_name.py  bf8d239641e9_add_queued_stage_status.py  c9f2a17b4d31_uppercase_user_code_values.py  e716148755d5_create_assets.py  f1515bf03a82_drop_error_codes_table_error_handling_.py
app/: config.py  constants.py  db.py  main.py
app/api/: projects.py
app/auth/: admin_router.py  dependencies.py  router.py  security.py  seed_admin.py  seed_sample_users.py
app/core/: events.py  pipeline.py  views.py  worker.py
app/models/: __init__.py  asset.py  base.py  error_code.py  project.py  refresh_token.py  stage.py  user.py
app/providers/: base.py
app/queries/: __init__.py  assets.sql  error_codes.sql  projects.sql  refresh_tokens.sql  stages.sql  users.sql
app/utils/: errors.py  ffmpeg.py  logging.py  time.py  (+1 more)
docs/: PATHS.md  SCHEMA.md  schema.sql
scripts/: probe_stock_hitrate.py  seed_admin.py  seed_sample_users.py
tests/: conftest.py  test_account_lockout.py  test_admin_users.py  test_alembic_migration.py  test_api_asset.py  test_api_captions.py  test_api_events.py  test_api_projects.py  test_api_render.py  test_asset_model.py  test_auth_dependencies.py  test_auth_login.py  test_auth_me.py  test_auth_refresh_logout.py  test_auth_register.py  test_base_entity.py  test_captions_srt.py  test_config.py  test_core_events.py  test_core_views.py  test_core_worker.py  test_db.py  test_error_code_migration.py  test_errors.py  test_ffmpeg.py  test_health.py  test_logging.py  test_pipeline_models.py  test_pipeline_run_stage.py  test_pipeline_state_machine.py  test_pipeline_transition.py  test_pipeline_validate.py  test_pipeline_voice_run.py  test_provider_base.py  test_provider_captions_fake.py  test_provider_captions_whisper.py  test_provider_registry.py  test_provider_render_fake.py  test_provider_render_slideshow.py  test_provider_render_stock.py  (+25 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
(+101 files in other folders)
