[project]
name = "studio"
version = "0.1.0"
description = "Shorts auto-generation web app"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "tzdata>=2024.2",
    "aiosql>=13.4",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
    "openai>=2.45.0",
    "anthropic>=0.116.0",
    "edge-tts>=7.2.8",
    "faster-whisper>=1.1.0",
    "imageio-ffmpeg>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "testcontainers[postgres]>=4.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-v"
markers = ["slow: 실제 ffmpeg 등 느린 통합 테스트 (기본 실행에 포함)"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
